# dali2hass

./: README.md  TODO  pyproject.toml
dali2hass/: __init__.py  cmdline.py  config.py  dali.py  hass.py
dali2hass/drivers/: __init__.py  daliserver.py
